# ARpest

./: .gitignore  README.md  constants.py  cursor.py  data_catalog.py  data_handler.py  data_loader.py  dataloaders.py  entities.py  figure.py  figure_handeler.py  file_catalog.py  file_handler.py  get_colour.py  gui.py  logbook.py  operations.py  processing.py  pyproject.toml  run.py  setup.py  state_catalog.py  states_figure.py  your_bk_dill.pkl
_instruction/: PIT_install_v2.txt  codeinfo.pages
_old_files/: figure.py  figure_handeler.py  gui.py  states_figure.py
arpest/: app.py
arpest/core/loaders/: bloch.py  i05.py
arpest/operations/: __init__.py  base.py  basic.py  fermi.py  fit.py  k_space.py  registry.py
arpest/ui/: dataset_tab.py  main_window.py  roi_controller.py
arpest/ui/panels/analysis/: history.py  panel.py
arpest/ui/panels/analysis/widgets/: base.py  fitting.py  overplot.py
arpest/ui/panels/operations/: panel.py
arpest/ui/panels/operations/widgets/operations/: background.py  registry.py  roi.py
arpest/ui/widgets/: analysis_panel.py  file_catalog.py  operations_panel.py  state_history.py
arpest/ui/widgets/operations/: background.py  base.py  basic.py  curvature.py  fermi_level.py  k_space.py  registry.py  rotate.py
arpest/utils/: config.py  constants.py  session.py
arpest/utils/functions/: fermi_dirac_ditribution.py
arpest/visualization/: analysis_canvas.py  figure_2d.py  figure_3d.py  figure_4d.py  roi.py
docs/: QUICKSTART.md
examples/: i05-109102.nxs
hv _scan_update/: processing.py
